<resources>
    <string name="app_name">JJournal</string>
    <string name="settings">Settings</string>
    <string name="home_page_title">Home</string>
    <string name="journal_page_title">Journal</string>
    <string name="apps_page_title">Apps</string>
    <string name="add_journal_entry">New Journal Entry</string>
    <string name="mood_graph_title">Your Mood Overview</string>
    <string name="app_graph_title">Your App Usage</string>
    <string name="mood_description">Entry Mood</string>
    <string name="mood_very_sad">Very Sad</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_neutral">Neutral</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_very_happy">Very Happy</string>
    <string name="app_image_description">App Image</string>
    <string name="expand_list">View More</string>
    <string name="welcome">Welcome!</string>
    <string name="app_description">Welcome to JJournal! This app is a mood journaling app designed to help you understand when you use your mobile phone.\nWe use the information you jot down in your journal, along with your app usage, to determine in what moods you tend to spend more time looking at apps.</string>
    <string name="splash_confirm">I\'m In!</string>
    <string name="name_hint">Enter Name…</string>
    <string name="continue_text">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preferences_header">Preferences</string>
    <string name="name_header">Name</string>
    <string name="dark_mode_header">Dark Mode</string>
    <string name="settings_page_title">Settings</string>
    <string name="back">Back</string>
    <string name="name_error_hint">Please Enter a Name</string>
    <string name="next_tag">Next</string>
    <string name="done_tag">I\'m Done!</string>
    <string name="journal_tag_1">Is this entry for\ntoday?</string>
    <string name="date_input_hint">Date</string>
    <string name="date_input_placeholder">DD/MM/YYYY</string>
    <string name="close">Close</string>
    <string name="time_input_hint">Open Time Picker</string>
    <string name="journal_tag_2">Is this entry for\nnow?</string>
    <string name="journal_tag_3">What is your\nmood like?</string>
    <string name="description_input_hint">Want to say more?</string>
    <string name="journal_title_hint">Add a Title?</string>
    <string name="clear_data_button">Clear App Data</string>
    <string name="clear_data_warning">Are you sure you want to clear all app data?\nThis cannot be undone.</string>
    <string name="im_sure">I\'m Sure</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data_extra_warning">Tap to confirm</string>
    <string name="calendar_hint">Open Calendar</string>
    <string name="date_empty_warning">Please pick a date</string>
    <string name="time_empty_warning">Please pick a time</string>
    <string name="time_hint">HH:MM</string>
    <string name="app_permission_notice">Click allow and check \"JJournal\" on the list</string>
    <string name="app_permission_title">We need permissions to use your app usage data</string>
    <string name="permissions_already_granted">You have already granted permissions to this app</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="permissions_notice">The permissions will be applied the next time you open the app</string>
    <string name="permissions_refresh">Please refresh the app to see this list</string>
    <string name="mood_none">No Details</string>
</resources>