<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/journal_background_4"
    tools:context=".JournalAddFragment4">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        app:tint="?attr/colorOnPrimary" />

    <Button
        android:id="@+id/doneButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/done_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/entryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorSurface"
            android:ems="10"
            android:hint="@string/journal_title_hint"
            android:importantForAutofill="no"
            android:inputType="text|textCapWords"
            android:padding="16dp"
            android:textColorHint="?attr/colorAccent" />

        <EditText
            android:id="@+id/extraInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="?attr/colorSurface"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_input_hint"
            android:importantForAutofill="no"
            android:inputType="text|textAutoCorrect|textCapSentences|textMultiLine"
            android:maxLines="15"
            android:minLines="15"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorAccent"
            android:verticalScrollbarPosition="right" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>